--- a/app/views/planners/home.html.erb
+++ b/app/views/planners/home.html.erb
@@ -6,7 +6,7 @@
     <div>
         <div class="col">
             <div class="card bg-dark text-white">
-            <img src="https://scontent.fceb2-2.fna.fbcdn.net/v/t1.6435-9/195861584_961770958006428_4789851425769271538_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=e3f864&_nc_ohc=mv0nbhE5X0gAX-TsJvc&_nc_ht=scontent.fceb2-2.fna&oh=50e89b093a126b83f250a309e266c71b&oe=60CBA869" class="card-img" alt="Version 1.6 Poster" style="filter: brightness(50%)">
+            <img src="https://i.imgur.com/WZJO3ox.jpg" class="card-img" alt="Version 1.6 Poster" style="filter: brightness(50%)">
             <div class="card-img-overlay">
                 <h1 class="card-title display-5">Welcome to Paimongems</h1>
                 <h4 class="card-text">
@@ -17,4 +17,28 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-lg-8 col-md-10 col-12">  
+            <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.1.0</span> - 17th June, 2021</h5>
+            <ul class="list-unstyled mt-3">
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Added Intertwined Fate</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Added Acquaint Fate</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Fixed some responsive issues</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Fixed some calculation issues</li>
+            </ul>
+
+            <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.0</span> - 13th June, 2021</h5>
+            <ul class="list-unstyled mt-3">
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Initial Released</li>
+            </ul>
+          
+
+            <div class="mt-4">
+                <a href="/planner" class="btn btn-primary">Get started</a>
+            </div>
+        </div><!--end col-->
+    </div><!--end row-->
 </div>
