Change get started color

--- a/app/views/planners/home.html.erb
+++ b/app/views/planners/home.html.erb
@@ -37,7 +37,7 @@
           
 
             <div class="mt-4">
-                <a href="/planner" class="btn btn-primary">Get started</a>
+                <a href="/planner" class="btn btn-success">Get started</a>
             </div>
         </div><!--end col-->
     </div><!--end row-->
